--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "aos": "^2.3.4",
+    "firebase": "^10.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-simple-captcha": "^9.3.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.6.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
